--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /node_modules
 .links.txt
 .notite.txt
+backend/CarrefourDB.py
+backend/carrefour_products_db.csv
+backend/index.js
+backend/mega.csv
+backend/mega1.csv
+backend/AuchanDB.py
